Issue #65: Wrap long connect URIs

--- a/data/css/frame-table.css
+++ b/data/css/frame-table.css
@@ -60,6 +60,12 @@
   padding: 1px;
 }
 
+/* #65 Wrap extremely long connect URIs */
+.frameRow.eventRow td {
+  word-wrap: break-word;
+  max-width: 20px;
+}
+
 /******************************************************************************/
 /* Inline Packet Details Preview */
 
